# trend-pullback

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
configs/: base.yaml  live_demo.yaml  live_mainnet.yaml  live_testnet.yaml  sample_backtest.yaml
scripts/: fetch_data.py  run_backtest.py  run_live.py  run_parameter_sweep.py  run_walk_forward.py
src/trend_pullback/: __init__.py  analyzers.py  broker.py  config.py  datafeed.py  indicators.py  notifier.py  reporting.py  risk.py  signal_engine.py  state.py  strategy.py  utils.py
tests/: conftest.py  test_config.py  test_indicators.py  test_risk.py  test_signal_engine.py
